adjust pading, margins, borders, width, and height of ALL dorm posters

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
  <header>
   <h1> Meet your Roommates </h1>
-  <h2> Judge (I mean, get to know...) your freshman roommates by helping them frame and arrange their posters.  </h2>
+  <h2> Judge (I mean, get to know...) your freshman roommates by helping them frame and arrange their posters. </h2>
  </header>
 
  <div class="poster">
@@ -24,8 +24,10 @@
  <div class="poster">
   <h3> "The Neurotic New Yorker" </h3>
   <!-- Hang them in the frames that are the same size (Hint: Think about padding...)   -->
-  <img id="woody" src="images/woody.jpg" alt="woody">
-  <img id="newyork" src="images/newyork.jpg" alt="newyork">
+  <div class="space">
+   <img id="woody" src="images/woody.jpg" alt="woody">
+   <img id="newyork" src="images/newyork.jpg" alt="newyork">
+  </div>
  </div>
 
 
